--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.9.1",
+    "@xstate/react": "^0.8.1",
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-beta.1",
     "next": "latest",
     "next-images": "^1.4.0",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "xstate": "^4.10.0"
   },
   "scripts": {
     "dev": "next",
